--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Material+Icons">
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    `<link href="https://unpkg.com/vue-qrcode-reader/dist/vue-qrcode-reader.css" rel="stylesheet">
+    <script src="https://unpkg.com/vue-qrcode-reader/dist/vue-qrcode-reader.browser.js"></script>`
   </head>
   <body>
     <noscript>
